fix alignement

--- a/src/app/docs/components/docs-layout/docs-layout.module.scss
+++ b/src/app/docs/components/docs-layout/docs-layout.module.scss
@@ -40,7 +40,7 @@
   .docs-top {
     display: flex;
     gap: 100px;
-    align-items: baseline;
+    align-items: center;
 
     @include media-mobile-landscape {
       gap: 20px;
