--- a/src/app/docs/components/lang-switcher/lang-switcher.module.scss
+++ b/src/app/docs/components/lang-switcher/lang-switcher.module.scss
@@ -2,7 +2,6 @@
   display: flex;
   gap: 10px;
   align-items: center;
-  justify-content: end;
 
   .active {
     font-weight: bold;
